    architecture of a particular package (which might not match the overall
    system architecture on multiarch-capable systems, e. g. an i386 Firefox
    package installed on amd64).
  * backends/packaging-dpkg.py: Implement get_architecture() and add test
    case.
  * apport/report.py, add_package_info(): Add Architecture: field. 
    (LP: #87424)

 -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 26 Feb 2007 18:32:21 +0100

apport (0.59) feisty; urgency=low

  * apport/report.py: Check that interpreter options are discarded in
    test_check_interpreted_script(). This replicates bug #87005.
  * apport/report.py, _check_interpreted_script(): Filter out interpreter
    command line options. This should make the detection of interpreted
    scripts more robust. (LP: #87005)
  * test-apport, check_crash(): Differ between expecting the program dumping
    core and finding a core dump on disk, because this is not equivalent any
    more with core pipelining.
  * bin/apport: Write core files into a process' cwd if the process' ulimit
    requests and permits it and the crashes process is not packaged, so that
    developers get happy again. Test this behaviour with various ulimits in
    test-apport.
  * test-apport: Check that the core file written by apport is valid. This
    uncovers kernel bugs like #87065
  * problem_report.py test suite: Use assertAlmostEqual() when comparing stat
    times, since they are floats on some systems.
  * apport/report.py, add_gdb_info():
    - Remove all the initial gdb output, which gets rid of the duplicated #0
      line.
    - Replace some stray tabs with spaces.
    - Thanks to Kees Cook for this!

 -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 22 Feb 2007 19:52:52 +0100

apport (0.58) feisty; urgency=low

  * qt4/apport-qt.desktop.in  move to System menu

 -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 20 Feb 2007 11:35:17 +0000

apport (0.57) feisty; urgency=low
